cmake_minimum_required(VERSION 3.10)
project(ttygg C CXX)

set(SOURCES main.cpp)
if(CMAKE_SYSTEM_NAME STREQUAL "Linux" OR CMAKE_SYSTEM_NAME STREQUAL "Android")
  list(APPEND SOURCES linux_nonstd_baud.cpp)
endif()
add_executable(ttygg ${SOURCES})
target_compile_features(ttygg PRIVATE cxx_std_11)
if(APPLE)
  find_library(IOKIT_FRAMEWORK IOKit REQUIRED)
  target_link_libraries(ttygg PRIVATE ${IOKIT_FRAMEWORK})
endif()
